Upgrade to Java 21 & Started topk-egal